src/app/globals.css
/* ... */
.dedicated_team_card,
.service_detail_card_border:hover {
  background: var(--theme-color);
  box-shadow: 0px 2px 6px 0px #00000033;
}

.service_item_card:hover {
  background: var(--theme-color);
}

.service_item_card:hover svg * {
  fill: white;
}

.why_staff_augmentation svg {
  width: 100%;
  height: fit-content;
}

.we_are_hiring svg {
  height: auto;
}


.loader {
  --dim: 3rem;
  width: var(--dim);
  height: var(--dim);
  position: relative;
  animation: spin988 2s linear infinite;
}

.loader .circle {
  --color:var(--theme-color);
  --dim: 1.2rem;
  width: var(--dim);
  height: var(--dim);
  background-color: var(--color);
  border-radius: 0;
  position: absolute;
}

.loader .circle:nth-child(1) {
  top: 0;
  left: 0;
}

.loader .circle:nth-child(2) {
  top: 0;
  right: 0;
}

.loader .circle:nth-child(3) {
  bottom: 0;
  left: 0;
}

.loader .circle:nth-child(4) {
  bottom: 0;
  right: 0;
}

@keyframes spin988 {
  0% {
    transform: scale(1) rotate(0);
  }

  20%, 25% {
    transform: scale(1.3) rotate(90deg);
  }

  45%, 50% {
    transform: scale(1) rotate(180deg);
  }

  70%, 75% {
    transform: scale(1.3) rotate(270deg);
  }

  95%, 100% {
    transform: scale(1) rotate(360deg);
  }
}

